# paranoia-sysinfo

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: hardware.rs  main.rs
