[package]
name = "paranoia_sysinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
futures-util = "0.3.31"
serde_json = "1.0.138"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.26.1"
dotenv = "0.15.0"
log = "0.4.25"
env_logger = "0.11.6"
